Update APIs for Home
